# jinja2json

./: .gitignore  Cargo.toml  README.md
examples/: schema.rs
py_jinja2json/: Cargo.toml  print_schema.py  pyproject.toml
py_jinja2json/src/: lib.rs
py_jinja2json/src/py_jinja2json/: __init__.py
src/: lib.rs  main.rs
templates/: analysis.json  chat_template.j2  reconstructed.j2
