[package]
name = "jinja2json"
version = "0.1.0"
edition = "2021"

[lib]
name = "jinja2json"
path = "src/lib.rs"

[[bin]]
name = "jinja2json"
path = "src/main.rs"
required-features = []

[dependencies]
minijinja = { version = "2", features = ["unstable_machinery", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
regex = "1.10"
clap = { version = "4.0", features = ["derive"] }