[project]
name = "py-jinja2json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "drbh", email = "david.richard.holtz@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
py-jinja2json = "py_jinja2json:main"

[tool.maturin]
module-name = "py_jinja2json._core"
python-packages = ["py_jinja2json"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
